--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# ??
 server.port=8848
 
 
@@ -5,3 +6,24 @@ spring.datasource.url=jdbc:mysql://8.130.101.202:3306/music?
 spring.datasource.username=root
 spring.datasource.password=000000.
 spring.datasource.type=com.mysql.cj.jdbc.MysqlDataSource
+
+
+
+
+
+############## Sa-Token ?? (??: https://sa-token.cc) ##############
+
+# token ??????? cookie ???
+sa-token.token-name=satoken
+# token ????????? ??30??-1 ??????
+sa-token.timeout=2592000
+# token ??????????????? token ???????????????????-1 ??????????
+sa-token.active-timeout=-1
+# ?????????????? ?? true ???????, ? false ??????????
+sa-token.is-concurrent=false
+# ????????????????? token ?? true ????????? token, ? false ????????? token?
+sa-token.is-share=true
+# token ?????????uuid?simple-uuid?random-32?random-64?random-128?tik?
+sa-token.token-style=uuid
+# ????????
+sa-token.is-log=true
