--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 server.port=8848
 
 
-spring.datasource.url=jdbc:mysql://8.130.101.202:3306/music?
+#spring.datasource.url=jdbc:mysql://8.130.101.202:3306/music?
+spring.datasource.url=jdbc:mysql://localhost:3306/music?
 spring.datasource.username=root
 spring.datasource.password=000000.
 spring.datasource.type=com.mysql.cj.jdbc.MysqlDataSource
